--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,2 @@
-# Godot specific ignores
-.import/
-export/
-
-# OS-specific files
-.DS_Store
-Thumbs.db
-
-# User-specific files
-*.godot
-*.import
-*.mono/
-*.tscn.import
-*.tres.import
+# Godot 4+ specific ignores
+.godot/
